# paperbrace

./: .gitignore  LICENSE  README.md  paperbrace.db  paperbrace.toml  pyproject.toml
docs/: architecture.md  dev.md  privacy.md  roadmap.md
eval/: cases.jsonl
src/paperbrace/: __init__.py  __main__.py  chroma_retriever.py  chunking.py  cli.py  config.py  db.py  flat_retriever.py  llm_client.py  paths.py  render.py  retriever.py  sqlitevec_retriever.py  store.py  vector_ops.py
src/paperbrace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/integration/: test_cli_basic.py
